# pqchecker

./: .gitattributes  .gitignore  INSTALL  INSTALL.fr  Makefile  Makefile.am  Makefile.in  README  README.fr  README.md  adjustdate.bash  config.h  config.h.in  config.status  configure  configure.ac  libtool  pqchecker.man  pqchecker.man.fr  pqmessenger.man.fr
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
doc/: LICENSE.fr  Makefile  Makefile.am  Makefile.in  README  README.fr  pqchecker.3  pqmessenger.3
doc/fr/: Makefile  Makefile.am  Makefile.in  pqchecker.3  pqmessenger.3
doc/pkg/deb/: README  README.fr
doc/pkg/rpm/: README  README.fr
po/: pqchecker.pot
po/fr/: pqchecker.mo  pqchecker.po
src/: JNIGateway.c  Makefile  Makefile.am  Makefile.in  comm.c  comm.h  net_meddeb_pqmessenger_JNIGateway.h  pparamio.c  pparamio.h  pqcheck.c  pqcheck.h  pqchecker.c  pqchecker.h  shmap.c  shmap.h
src/.deps/: pqchecker_la-JNIGateway.Plo  pqchecker_la-comm.Plo  pqchecker_la-pparamio.Plo  pqchecker_la-pqcheck.Plo  pqchecker_la-pqchecker.Plo  pqchecker_la-shmap.Plo
